--- a/FloatingIslandsWebsite/style.css
+++ b/FloatingIslandsWebsite/style.css
@@ -10,7 +10,7 @@ html{
 }
 
 #parent1 {
-        border: 3px solid rgba(0,0,0,1);
+        /*border: 3px solid rgba(0,0,0,1);*/
         /*border-radius: 50%; */
         position: absolute;
         z-index: 99;
